[package]
name = "ghostty-spike"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ghostty_spike"

[[bin]]
name = "ghostty-spike"
path = "src/main.rs"

[dependencies]
ghostty-vt = { path = "../ghostty-vt" }
base64 = "0.22.1"
crossterm = "0.29.0"
eframe = "0.34.2"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
ttf-parser = "0.25.1"
unicode-width = "0.2.2"
