[package]
name = "qwertty-term-spike"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "qwertty_term_spike"

[[bin]]
name = "qwertty-term-spike"
path = "src/main.rs"

[dependencies]
qwertty-term-vt = { path = "../qwertty-term-vt" }
qwertty-term-input = { path = "../qwertty-term-input" }
base64 = "0.22.1"
crossterm = "0.29.0"
eframe = "0.34.2"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
ttf-parser = "0.25.1"
unicode-width = "0.2.2"
