[package]
name = "vt-diff"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Differential-testing harness: libghostty-vt (Zig reference) vs ghostty-vt (Rust port)"
publish = false

[features]
# Link against the Zig-built libghostty-vt static library and enable the
# `ReferenceTerminal` oracle plus its tests. Off by default so that
# `cargo check --workspace` stays green on machines without the artifact.
# See README.md for how to build the library and activate this feature.
reference = []

[dependencies]
