[package]
name = "frame-capture"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless embeddability example: VT bytes in, PNG frames out, through public ghostty-rs crate APIs only"
publish = false

[[bin]]
name = "frame-capture"
path = "src/main.rs"

[dependencies]
# The three public crates the embeddability story is made of. Everything the
# example does goes through their public APIs — no renderer internals.
ghostty-vt = { path = "../../crates/ghostty-vt" }
ghostty-font = { path = "../../crates/ghostty-font" }
ghostty-renderer = { path = "../../crates/ghostty-renderer" }
# Real PNG encoder (example-only; library crates stay free of it). 0.18 is
# already in the workspace lockfile transitively, so this adds no lock entries.
png = "0.18"
