[package]
name = "qwertty-term-input"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Input encoding primitives ported from Ghostty: key/mouse/paste event -> PTY byte encoders"

[lib]
name = "qwertty_term_input"

[dependencies]

[dev-dependencies]
