# R5 de-risk spike: AppKit NSTextInputClient -> ghostty-input encoder.
#
# This is its OWN workspace root (note the empty `[workspace]` table below), so
# it is NOT a member of the top-level ghostty-rs workspace. That keeps
# `cargo check --workspace` at the repo root green and untouched: the root
# `members = ["crates/*", "xtask"]` glob never scans `spikes/`, and declaring a
# workspace here stops any accidental upward member discovery. Build/test this
# crate explicitly from its own directory:
#
#     cargo test --manifest-path spikes/appkit-input/Cargo.toml
#
# The dependency on `ghostty-input` is by relative path into the sibling
# `crates/` tree; it does not pull the whole workspace in.
[workspace]

[package]
name = "spike-appkit-input"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "spike_appkit_input"

[[bin]]
name = "spike-appkit-input"
path = "src/main.rs"

[dependencies]
ghostty-input = { path = "../../crates/ghostty-input" }

# objc2 family pinned to the same versions the workspace already standardizes on
# (objc2 0.6 / objc2-* 0.3.2, per crates/ghostty-renderer and crates/ghostty-font),
# so the spike exercises the exact toolchain R5 would inherit.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSView",
    "NSResponder",
    "NSEvent",
    "NSText",
    "NSTextInputClient",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSString",
    "NSAttributedString",
    "NSGeometry",
    "NSRange",
    "NSValue",
] }
