# cargo-fuzz targets for ghostty-vt.
#
# This is its own workspace (note the empty `[workspace]` table below) so it is
# NOT a member of the main workspace: `cargo check --workspace` stays green on
# stable without cargo-fuzz or nightly. Build/run them explicitly with a nightly
# toolchain and cargo-fuzz installed:
#
#   cargo +nightly fuzz run parser -- -max_total_time=60
#   cargo +nightly fuzz run resize -- -max_total_time=600
#
# Targets:
#   * parser — arbitrary bytes through the VT parser + UTF-8 decoder.
#   * resize — byte-chunks interleaved with grid resizes against a real
#     `Terminal` (closes the resize blind spot the pure-bytes campaign missed).
#
# See each `fuzz_targets/*.rs` for the invariants asserted.

[package]
name = "ghostty-vt-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
ghostty-vt = { path = ".." }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resize"
path = "fuzz_targets/resize.rs"
test = false
doc = false
bench = false
